--- a/app/login/login.module.css
+++ b/app/login/login.module.css
@@ -37,8 +37,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    /* background-color: red; */
 }
 
 .logoAnimation {
@@ -68,6 +66,7 @@
     box-shadow: 0 1rem 0 0 var(--secondary-color);
     border: 1.25rem solid transparent;
     box-sizing: border-box;
+    /* box-shadow: -3px 12px 15px -12px rgba(187, 187, 187, 1); */
 }
 
 .intro {
@@ -84,7 +83,7 @@
     height: auto;
     position: relative;
 
-    background-color: red;
+    /* background-color: red; */
 }
 
 .logoImg {
