--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,14 +88,30 @@ video {
     vertical-align: baseline;
 }
 
+@font-face {
+    font-family: "Pretendard-Regular";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+        format("woff");
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* css 변수 */
 :root {
     --primary-color: #53aaaf;
     --secondary-color: #ffdc62;
-    --primary_character-color: #0f5d62;
-    --secondary_character-color: #626020;
-    --third_character-color: #817f33;
+    --primary-character-color: #0f5d62;
+    --secondary-character-color: #626020;
+    --third-character-color: #817f33;
     --box-color: #f8f7ea;
     --container-width: 100vw;
     --container-height: 90vh;
+
+    --font_color_gray: #b0b0b0;
+
+    --box_shadow: 0px -2px 4px rgba(0, 0, 0, 0.04);
+
+    --font_size_title: 1rem;
+    --font_size_content: 0.8rem;
+    --font_size_additional: 0.7rem;
 }
