--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+
 /* css 초기화 */
 html,
 body,
@@ -88,12 +90,18 @@ video {
     vertical-align: baseline;
 }
 
-@font-face {
-    font-family: "Pretendard-Regular";
-    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-        format("woff");
-    font-weight: 400;
-    font-style: normal;
+body {
+    background-color: white;
+}
+
+/* 폰트 적용 */
+* {
+    font-family: "Pretendard", sans-serif !important;
+    font-weight: 500 !important;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* css 변수 */
@@ -107,11 +115,24 @@ video {
     --container-width: 100vw;
     --container-height: 90vh;
 
+    --stroke_color: #f6f6f6;
+    --stroke_color2: #e6e6e6;
+    --main_color: #53aaaf;
+
     --font_color_gray: #b0b0b0;
+    --font_color_gray2: #989898;
+    --font_color_gray3: #565656;
+    --font_color_yellow: #626020;
+    --font_color_yellow2: #9e9c66;
+    --font_color_blue: #0f5d62;
 
     --box_shadow: 0px -2px 4px rgba(0, 0, 0, 0.04);
+    --box_shadow2: 0px 2px 4px rgba(0, 0, 0, 0.04);
+    --box_radius: 0.8rem;
 
-    --font_size_title: 1rem;
-    --font_size_content: 0.8rem;
+    --box_color_white: #fdfdfd;
+
+    --font_size_title: 1.3rem;
+    --font_size_content: 0.9rem;
     --font_size_additional: 0.7rem;
 }
