[#30] api: 댓글 추가 api 연결

--- a/app/read/[id]/read.module.css
+++ b/app/read/[id]/read.module.css
@@ -131,6 +131,10 @@
     color: rgb(255, 133, 133);
 }
 
+.commentBox {
+    margin-bottom: 6vh;
+}
+
 .commentBarForm {
     display: flex;
     justify-content: space-between;
