--- a/app/components/Comment/Comment.module.css
+++ b/app/components/Comment/Comment.module.css
@@ -14,6 +14,28 @@
     box-shadow: var(--box_shadow2);
 }
 
+.commentHeader {
+    width: inherit;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.delBtn {
+    padding: 0.1rem 0.3rem;
+    background-color: rgb(224, 224, 224);
+    color: var(--font_color_gray2);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: var(--font_size_additional);
+    border-radius: var(--box_radius);
+    border: 1px solid var(--stroke_color);
+    box-shadow: var(--box_shadow2);
+}
+
 .username {
     font-size: var(--font_size_additional);
     color: var(--font_color_gray);
